# sprint-planner-ai

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  api.md  app.py  command.md  dummy_idea_learning.md  pyproject.toml  requirements.txt  test_db.py
.github/workflows/: docker-publish.yml
logs/: global_state.json  last_message.json  logs.txt  narrative_sections.json
src/: db.py
src/agents/: business_goals_agent.py  constraint_analysis_agent.py  deep_idea_analysis_agent.py  execution_preferences_agent.py  idea_evaluation_agent.py  market_competition_agent.py  narrative_agent.py  research_agent.py  simple_agent.py  sprint_planner_agent.py  support_agent.py  team_profile_agent.py  technology_implementation_agent.py
src/database/: neon_db.py
src/graphs/: workflow.py
src/handlers/: __init__.py  lifespan_handler.py  message_storage.py  stage_completion.py  streaming.py
src/llms/: gemini_llm.py  openai_llm.py
src/models/: chat_message_model.py  chat_transfer_model.py  idea.py  idea_state_model.py  investor_question.py  message.py  session.py  state_var.py  task.py  user.py  user_model.py
src/routes/: ai_router.py  chat_router.py  chat_streaming.py
src/schemas/: __init__.py  chat_response_models.py  models.py
src/states/: agile_project_manager_agent_state.py  business_goals_agent_state.py  constraint_analysis_agent_state.py  deep_idea_analysis_agent_state.py  execution_preferences_agent_state.py  global_idea_state.py  idea_evaluation_agent_state.py  market_competition_agent_state.py  narrative_agent_state.py  research_agent_state.py  (+2 more)
(+14 files in other folders)
