[project]
name = "sprint-planner-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.121.2",
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.3",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.3",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "pinecone>=7.3.0",
    "psycopg[binary,pool]>=3.3.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "tavily-python>=0.7.14",
    "uvicorn>=0.38.0",
]
